--- a/Alquiler2Pesoss/Shared/MainLayout.razor
+++ b/Alquiler2Pesoss/Shared/MainLayout.razor
@@ -2,10 +2,10 @@
 
 <PageTitle>Alquiler2Pesoss</PageTitle>
 
-<div class="page">
+@*<div class="page">
     <div class="sidebar">
         <NavMenu />
-    </div>
+    </div>*@
 
     <main>
         <div class="top-row px-4">
@@ -16,4 +16,4 @@
             @Body
         </article>
     </main>
-</div>
+@*</div>*@
