--- a/Alquiler2Pesoss/Shared/NavMenu.razor
+++ b/Alquiler2Pesoss/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@*<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Alquiler2Pesoss</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -6,8 +6,8 @@
         </button>
     </div>
 </div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+*@
+@*<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -25,7 +25,7 @@
             </NavLink>
         </div>
     </nav>
-</div>
+</div>*@
 
 @code {
     private bool collapseNavMenu = true;
